changes that doesnt work